creacion de estilos de texto

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
-    <string name="app_name">HelloWorld</string>
+    <string name="app_name">DC Comics</string>
     <string name="superman">Superman</string>
-    <string name="nombre">Clark Kent</string>
+    <string name="nombre_superman">Clark Kent</string>
+    <string name="nombre">Nombre:</string>
+    <string name="powers">Poderes:</string>
+    <string name="poderes_superman">Super fuerza, vuelo, invulnerabilidad, super velocidad, vision con calor, congelar, vision con rayos x</string>
 </resources>
