declaracion de variables y segunda interface

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="nombre">Nombre:</string>
     <string name="powers">Poderes:</string>
     <string name="poderes_superman">Super fuerza, vuelo, invulnerabilidad, super velocidad, vision con calor, congelar, vision con rayos x</string>
+    <string name="registro">Registro de un superheroe</string>
+    <string name="registrar">Registrar</string>
 </resources>
